--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install: "pip install -r requirements.txt"
 language: python
 python:
   - "2.7"
-script: pybot test_google.robot
+script: robot tests.robot
