--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ script:
   - npm run build
 sudo: false
 before_install:
+# debug
+echo $PATH 
 # install dependencies
 install: "pip install -r requirements.txt"  
 language: python
