--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
 sudo: false
 before_install:
 # debug
+echo Will show path
 echo $PATH 
 # install dependencies
 install: "pip install -r requirements.txt"  
